--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,16 @@ body {
 
   font-family: "Poppins", sans-serif;
   background: url(/image/img.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .wrapper {
   width: 420px;
-  background: purple;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(20px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   color: #fff;
 
   border-radius: 10px;
